new website template

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     Your browser does not support the video tag.
                 </video>
                 <div class="video-caption">
-                    <strong>TL;DR:</strong> BlenderFusion combines precise 3D geometric control through Blender with a generative compositor (adapted from pre-trained Stable Diffusion v2) to enable percise geometry editing and versatile visual compositing, which are hard to achieve through the text control protocol.
+                    <strong>TL;DR:</strong> We present a zero-shot framework for realistic, depth-aware image editing using a novel feature-guidance technique (FeatGLaC) that enables seamless object insertion and depth-based scene compositing while preserving scene identity.
                 </div>
             </div>
         </div>
