--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Zero-Shot Depth-Aware Image Editing with Diffusion Models</title>
-    <link rel="icon" type="image/x-icon" href="static/img/logo.png">
+    <link rel="icon" type="image/x-icon" href="static/img/icons/buffer.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Zero-Shot Depth-Aware Image Editing with Diffusion Models" />
     <meta property="og:description" content="A 3D-grounded visual editing framework providing precise control and composition of various visual elements, including objects, camera, and background." />
