--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="icon-item">
-                        <img src="static/img/icons/application.svg">
+                        <img src="static/img/icons/edit.svg">
                         <div>
                             <strong>Depth-Aware Editing Applications</strong>: Demonstrates the effectiveness of depth-based layering in novel editing tasks such as object insertion and scene compositing at a user-specified depth.
                         </div>
