--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <!-- Slider Section -->
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@img-comparison-slider/component@7.1.0/dist/index.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@img-comparison-slider/component@7.1.0/dist/index.js"></script>
     <style>
         .slider-grid {
             display: grid;
@@ -231,7 +231,7 @@
             border-radius: 8px;
         }
 
-        figcaption {
+        figcaption1 {
             position: absolute;
             bottom: 8px;
             left: 12px;
@@ -242,21 +242,21 @@
     </style>
     <p style="color: indigo; font-style: italic; font-size: 18px; text-align: center;">
     Drag the slider to see the comparison with DeGLaD in Image space.
-    </p> -->
+    </p>
 
     
-    <!-- <div class="slider-grid">
+    <div class="slider-grid">
         
         <div class="slider-item">
             <h3 style="text-align: center;">Scene Compositing</h3>
             <img-comparison-slider>
                 <figure slot="first">
                     <img src="assets/figures/comp/image_mpi_1.png" style="width: 100%">
-                    <figcaption>Pixel α compositing</figcaption>
+                    <figcaption1>Pixel α compositing</figcaption1>
                 </figure>
                 <figure slot="second">
                     <img src="assets/figures/comp/ours_1.png" style="width: 100%">
-                    <figcaption>FeatGLaC (Ours)</figcaption>
+                    <figcaption1>FeatGLaC (Ours)</figcaption1>
                 </figure>
             </img-comparison-slider>
         </div>
@@ -266,16 +266,16 @@
             <img-comparison-slider>
                 <figure slot="first">
                     <img src="assets/figures/comp/image_mpi_4.png" style="width: 100%">
-                    <figcaption>Pixel α compositing</figcaption>
+                    <figcaption1>Pixel α compositing</figcaption1>
                 </figure>
                 <figure slot="second">
                     <img src="assets/figures/comp/ours_4.png" style="width: 100%">
-                    <figcaption>FeatGLaC (Ours)</figcaption>
+                    <figcaption1>FeatGLaC (Ours)</figcaption1>
                 </figure>
             </img-comparison-slider>
         </div>
 
-    </div> -->
+    </div>
 
 
     <script>
